# mi_primera_app_web_rust

./: .env  Cargo.toml  Dockerfile  README.md
